--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ alpaca-py = ">=0.8.0"
 pandas = ">=1.3.0"
 numpy = ">=1.20.0"
 python-dotenv = ">=0.19.0"
+openai = "*"
 
 [requires]
 python_version = "3.9"
