--- a/.github/workflows/scheduled_bot_run.yml
+++ b/.github/workflows/scheduled_bot_run.yml
@@ -27,9 +27,9 @@ jobs:
       BOT_API_SECRET_2: ${{ secrets.BOT_API_SECRET_2 }}
 
       # enable after successful test of other bots
-    #   BOT_NAME_3: ${{ secrets.BOT_NAME_3 }}
-    #   BOT_API_KEY_3: ${{ secrets.BOT_API_KEY_3 }}
-    #   BOT_API_SECRET_3: ${{ secrets.BOT_API_SECRET_3 }}
+      BOT_NAME_3: 'trading_bot_macd_melissa'
+      BOT_API_KEY_3: ${{ secrets.BOT_API_KEY_3 }}
+      BOT_API_SECRET_3: ${{ secrets.BOT_API_SECRET_3 }}
 
     #   BOT_NAME_4: ${{ secrets.BOT_NAME_4 }}
     #   BOT_API_KEY_4: ${{ secrets.BOT_API_KEY_4 }}
