--- a/.github/workflows/scheduled_bot_run.yml
+++ b/.github/workflows/scheduled_bot_run.yml
@@ -31,9 +31,10 @@ jobs:
       BOT_API_KEY_3: ${{ secrets.BOT_API_KEY_3 }}
       BOT_API_SECRET_3: ${{ secrets.BOT_API_SECRET_3 }}
 
-    #   BOT_NAME_4: ${{ secrets.BOT_NAME_4 }}
-    #   BOT_API_KEY_4: ${{ secrets.BOT_API_KEY_4 }}
-    #   BOT_API_SECRET_4: ${{ secrets.BOT_API_SECRET_4 }}
+      BOT_NAME_4: 'momentum_ml_carlo'
+      BOT_API_KEY_4: ${{ secrets.BOT_API_KEY_4 }}
+      BOT_API_SECRET_4: ${{ secrets.BOT_API_SECRET_4 }}
+
       FINNHUB_API_KEY: ${{secrets.FINNHUB_API_KEY}}
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
