--- a/.github/workflows/scheduled_bot_run_fast.yml
+++ b/.github/workflows/scheduled_bot_run_fast.yml
@@ -5,11 +5,9 @@ on:
   schedule:
     # Runs hourly at 8:00 AM Pacific Time - 3 (PDT/PST = UTC-7/UTC-8)
     # 8:00 AM PT = 15:00 UTC (during PDT, UTC-7)
-    # Adjust if needed for standard time or use a different trigger
     - cron: '0 15-22 * * 1-5'
   workflow_dispatch: # Allows manual triggering
 
-# Add permissions for the job to write contents (commit/push)
 permissions:
   contents: write
 
@@ -24,76 +22,71 @@ jobs:
       BOT_NAME_2: "momentum_bot_carlo"
       BOT_API_KEY_2: ${{ secrets.BOT_API_KEY_2 }}
       BOT_API_SECRET_2: ${{ secrets.BOT_API_SECRET_2 }}
-      
+
       BOT_NAME_3: 'trading_bot_macd_melissa'
       BOT_API_KEY_3: ${{ secrets.BOT_API_KEY_3 }}
       BOT_API_SECRET_3: ${{ secrets.BOT_API_SECRET_3 }}
 
     steps:
-    - name: Check out repository code
+    - name: Check out main branch
       uses: actions/checkout@v4
       with:
         fetch-depth: 0 
-        
+        ref: main
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10' # Specify your Python version
+        python-version: '3.10'
 
     - name: Install Pipenv and Dependencies
       run: |
         python -m pip install --upgrade pip pipenv
-        # Use sync which installs based on Pipfile.lock (faster for CI if lock file is up-to-date)
-        # Installs into the system python managed by setup-python action
-        pipenv sync --system --dev # Use --dev if you need development dependencies too
+        pipenv sync --system --dev
 
     - name: Run Bot Manager
       run: python bot_manager.py --run trading_bot_macd_melissa
 
     - name: Display Log File Content
-      # Run this step even if the bot manager script failed, to capture error logs
       if: always()
       run: |
         echo "--- Start of bot_manager.log ---"
-        # Use cat to output the log file content to the Actions console
-        # Use || true to prevent workflow failure if the log file doesn't exist
         cat bot_manager.log || true
         tail -c 1000 bot_manager.log || true
         echo "--- End of bot_manager.log ---"
 
-    - name: Configure Git
+    - name: Checkout bot-execution-fast branch
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        ref: bot-execution-fast
+
+    - name: Commit and Push Log Files
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@github.com"
 
-    - name: Commit and Push Log File
-      run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+        # Only stage .log files
+        find . -name "*.log" -exec git add {} +
 
-          git add .
-          if ! git diff --staged --quiet; then
-            echo "Changes detected in bot_manager.log. Committing..."
-            git commit -m "Update bot execution log [skip ci]" -m "Workflow Run ID: ${{ github.run_id }}"
-            echo "Pulling latest changes from bot-execution-fast branch..."
-            if git pull --rebase origin bot-execution-fast; then
-                echo "Rebase conflict detected. Resolving by keeping local versions of *.log files..."
-
-                 # Loop through conflicted .log files and resolve by keeping "ours"
-                for file in $(git diff --name-only --diff-filter=U | grep '\.log$'); do
-                    echo "Resolving conflict in $file by keeping local version..."
-                    git checkout --ours "$file"
-                    git add "$file"
-                done
-
-                git rebase --continue
-            fi
-
-            echo "Pushing updated log(s) to bot-execution-fast branch..."
-            git push origin HEAD:refs/heads/bot-execution-fast
-            echo "Push successful."
-          else
-            echo "No changes detected in bot_manager.log. Nothing to commit."
+        if ! git diff --staged --quiet; then
+          echo "Changes detected in .log files. Committing..."
+          git commit -m "Update bot execution log [skip ci]" -m "Workflow Run ID: ${{ github.run_id }}"
+          echo "Pulling latest changes from bot-execution-fast branch..."
+          if git pull --rebase origin bot-execution-fast; then
+            echo "Checking for log file conflicts..."
+            for file in $(git diff --name-only --diff-filter=U | grep '\.log$'); do
+              echo "Resolving conflict in $file by keeping local version..."
+              git checkout --ours "$file"
+              git add "$file"
+            done
+            git rebase --continue || true
           fi
+          echo "Pushing updated log(s) to bot-execution-fast branch..."
+          git push origin bot-execution-fast
+          echo "Push successful."
+        else
+          echo "No changes detected in .log files. Nothing to commit."
+        fi
       env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
